--- a/Структура.md
+++ b/Структура.md
@@ -1,4 +1,4 @@
-# Структура данных
+## Структура данных
 
 В базе данных в справочнике номенклатуры в группе "Мастер дверных систем" преставлены данные для описания геометрии профилей, комплектующих и их зависимостей для формирования:
 
@@ -15,4 +15,4 @@
 Поскольку все системы привязаны к конкретному производителю есть смысл привязывать формируемые записи к свойству *NAMESYSTEM*.
 Это записи из группы "Мастер дверных систем" в подгруппе *DS_NameSystem*
 
-## DS_NameSystem
+### DS_NameSystem
